# caliby

./: .gitignore  Caliby.py  README.md  pins.txt  pyproject.toml  refactor_plan.md
caliby/: Caliby.py  __init__.py
caliby/data/: const.py  data.py
caliby/data/datasets/: atomworks_sd_dataset.py
caliby/data/preprocessing/atomworks/: preprocess_examples.py
caliby/data/transform/: sd_featurizer.py
caliby/eval/eval_utils/: seq_des_utils.py
caliby/model/seq_denoiser/: sd_model.py
caliby/model/seq_denoiser/denoisers/: atom_mpnn_denoiser.py
tests/: test_design.py  test_design_ensemble.py  test_ensemble_inmemory.py  test_examples.py  test_inference.py  test_score.py  test_score_ensemble.py  test_temperature_diversity.py
tests/expected_outputs/: score_ensemble_outputs.csv  score_outputs.csv  seq_des_ensemble_output.csv  seq_des_ensemble_output_constraints.csv  seq_des_output.csv  seq_des_output_pos_constraint.csv
tests/test_inputs/native_pdbs/: 8t3j.cif
tests/test_inputs/protpardelle_ensembles/8huz/: scaffold_info.csv
tests/test_inputs/protpardelle_ensembles/8pmu/: 8pmu.cif
