[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caliby"
version = "0.1"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "lightning",
    "hydra-core",
    "omegaconf",
    "biotite",
    "atomworks",
    "numpy==1.26.3",
    "pandas",
    "scipy",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["caliby*", "chroma*"]
namespaces = true

[tool.setuptools.package-data]
caliby = ["configs/**/*.yaml", "configs/**/*.json", "configs/**/*.txt"]

[tool.ruff]
line-length = 120
exclude = ["chroma"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "preserve"   # avoid churning quotes
indent-style = "space"
