[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caliby"
version = "0.1"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "lightning",
    "hydra-core",
    "omegaconf",
    "biotite",
    "numpy>=1.26.3",
    "pyarrow>=17.0.0",
    "pandas",
    "scipy",
    "tqdm",
    "cython",
    "cytoolz",
    "hydride",
    "py3dmol",
    "pymol-remote",
    "rdkit",
    "typer",
    "zstandard",
    "einops",
    "PyYAML",
    "torchtyping",
    "p_tqdm",
    "atomworks==2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["caliby*", "chroma*"]
namespaces = true

[tool.setuptools.package-data]
caliby = ["configs/**/*.yaml", "configs/**/*.json", "configs/**/*.txt"]

[tool.ruff]
line-length = 120
exclude = ["chroma"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ruff.format]
quote-style = "preserve"   # avoid churning quotes
indent-style = "space"
